--- a/AngularJS/mod4_solution/styles/styles.css
+++ b/AngularJS/mod4_solution/styles/styles.css
@@ -58,3 +58,11 @@ input[type="text"] {
 .clearFloat{
   clear: left;
 }
+
+a[ui-sref]:hover {
+  display: inline-block;
+  cursor: pointer;
+  border: solid black 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
