--- a/AngularJS/mod4_solution/src/menuapp/templates/item-detail.template.html
+++ b/AngularJS/mod4_solution/src/menuapp/templates/item-detail.template.html
@@ -1,7 +1,27 @@
-<ul class="list-group">
+<!-- <ul class="list-group">
   <li ng-repeat="item in $ctrl.items"
       class="list-group-item list-group-item-action">
       {{ item.id }}, {{ item.short_name }}, {{ item.name }},
       {{ item.description }}
   </li>
-</ul>
+</ul> -->
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Short Name</th>
+      <th>Item Name</th>
+      <th>Iten Description</th>
+    </tr>
+  </thead>
+  <tbody ng-repeat="item in $ctrl.items">
+    <tr>
+      <!-- <th scope="row">1</th> -->
+      <td>{{ item.id }}</td>
+      <td>{{ item.short_name }}</td>
+      <td>{{ item.name }}</td>
+      <td>{{ item.description }}</td>
+    </tr>
+  </tbody>
+</table>
