--- a/AngularJS/mod4_solution/src/menuapp/templates/item-detail.template.html
+++ b/AngularJS/mod4_solution/src/menuapp/templates/item-detail.template.html
@@ -12,7 +12,7 @@
       <th>#</th>
       <th>Short Name</th>
       <th>Item Name</th>
-      <th>Iten Description</th>
+      <th>Item Description</th>
     </tr>
   </thead>
   <tbody ng-repeat="item in $ctrl.items">
