--- a/AngularJS/mod4_solution/src/menuapp/templates/categories.template.html
+++ b/AngularJS/mod4_solution/src/menuapp/templates/categories.template.html
@@ -2,7 +2,7 @@
   <li ng-repeat="category in $ctrl.items"
       class="list-group-item list-group-item-action">
       <a ui-sref="items({cateShortName: category.short_name})">
-        {{ category.id }}, {{ category.short_name }}, {{ category.name }},
+        {{ category.id }} ( {{ category.short_name }} ) {{ category.name }}
       </a>
   </li>
 </ul>
