--- a/AngularJS/mod4_solution/src/menuapp/templates/main-itemlist.template.html
+++ b/AngularJS/mod4_solution/src/menuapp/templates/main-itemlist.template.html
@@ -1,4 +1,5 @@
-<a ui-sref="home">Home</a> &lt; <a ui-sref="categories">Categories</a> &lt;
+<button type="button" class="btn btn-primary" ui-sref="home">Home</button> &lt;
+<button type="button" class="btn btn-primary" ui-sref="categories">Categories</button> &lt;
 <span>Items</span>
 
 <h3> Items </h3>
