--- a/AngularJS/mod4_solution/src/menuapp/templates/home.template.html
+++ b/AngularJS/mod4_solution/src/menuapp/templates/home.template.html
@@ -1,1 +1,5 @@
-<a ui-sref="categories">See our Category List!</a>
+<!-- <a ui-sref="categories">See our Category List!</a> -->
+
+<button type="button" class="btn btn-primary" ui-sref="categories">
+  See our Category List!
+</button>
