--- a/AngularJS/mod4_solution/src/menuapp/templates/main-categorylist.template.html
+++ b/AngularJS/mod4_solution/src/menuapp/templates/main-categorylist.template.html
@@ -1,4 +1,5 @@
-<a ui-sref="home">Home</a> &lt; <span>Categories</span>
+<button type="button" class="btn btn-primary" ui-sref="home">Home</button> &lt;
+<span>Categories</span>
 
 <h3> Categories </h3>
 <categories-list items="categoryList.items"></categories-list>
