--- a/AngularJS/mod4_solution/styles/styles.css
+++ b/AngularJS/mod4_solution/styles/styles.css
@@ -1,9 +1,16 @@
+body {
+  font-size: 1.2em;
+  padding: 20px;
+}
 h1 {
   margin-bottom: 30px;
 }
 input[type="text"] {
   width: 200px;
   float: left;
+}
+span {
+  font-size: 20px;
 }
 .narrow-button {
   float: left;
